Display distributive law errors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         </title>
     </head>
     <body>
+        <h1>Arithmetic Tables</h1>
         <div class="play-area"></div>
+        <div class="distributive-law-errors-section">
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
