--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
         </title>
     </head>
     <body>
-        <h1>Arithmetic Tables</h1>
+        <h1>Finite Field Sudoku</h1>
+        <h2>Number of Elements</h2>
+        <div>
+            <input class="size-input" type="number" min="2" max="28">
+            <button class="start-button">Reset</button>
+        </div>
+        <h2>Arithmetic Tables</h2>
         <div class="play-area"></div>
         <div class="distributive-law-errors-section">
         </div>
