Add associative law checks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         </div>
         <h2>Arithmetic Tables</h2>
         <div class="play-area"></div>
-        <div class="distributive-law-errors-section">
+        <div class="law-errors">
+            <div class="associative-law-errors-section">
+            </div>
+            <div class="distributive-law-errors-section">
+            </div>
         </div>
         <script src="index.js"></script>
     </body>
