Add buttons for mobile and such

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <h2>Arithmetic Tables</h2>
         <div class="play-area"></div>
+        <div class="buttons-area"></div>
         <div class="law-errors">
             <div class="associative-law-errors-section">
             </div>
